#709: Added Customer Type mutations